2004-04-11  Ted Gould <ted@gould.cx>

	* src/file.cpp, src/main.cpp, src/print.cpp, src/extension/init.cpp,
      src/extension/init.h, src/extension/system.cpp, src/extension/system.h,
      src/extension/implementation/script.cpp, src/extension/internal/eps-out.cpp,
      src/extension/internal/gnome.cpp, src/extension/internal/ps-out.cpp,
      src/extension/internal/ps.cpp, src/extension/internal/svg.cpp,
      src/extension/internal/win32.cpp:
    Change alot of files, but small changes.  Basically just took
	system.cpp and init.cpp and finally ported them to the Inkscape::
	Extension namespace.  Cleaned up the code in them a bunch, it is
	much easier to read now!  All the other files are just referencing
	these changes.

2004-04-11  Kees Cook <kees@outflux.net>

	* src/verbs.h, src/verbs.cpp, src/interface.cpp, src/interface.h: replaced
	  the rest of the missing menu verbs: "View New", "Cleanup".  Created
	  generic function to add icons to a given menu item (for submenu icons
	  mostly).
	* share/icons/icons.svg: added "selection_cleanup", "selection_deselect",
	  "selection_select_all".  Corrected "view_new" and "selection_smooth",
	  "dialog_toggle", "dialog_tool_options", "file_open_recent".
	* src/selection-chemistry.cpp, src/selection-chemistry.h: renamed
	  "selection_cleanup" function.

2004-04-11  Jon Phillip <jon@rejon.org>

	* Makefile.mingw share/Makefile.am src/Makefile.am 
	  share/markers/Makefile.am share/markers/.cvsignore config.h.mingw 
	  configure.in: 
      Added the proper infrastructure to get files to the right location for 
      markers.

	* share/tutorials/tipsandtricks.svg: Deleted the URL trick because it no 
      longer works or something.

2004-04-11  Kees Cook <kees@outflux.net>

	* src/verbs.h, src/verbs.cpp: added verbs for the Help and Tutorials menus.
	* src/interface.cpp: replaced contents of sp_ui_menu_help to use new verbs.
	* src/help.h, src/help.cpp: replaced sp_help_keys with more generic